test/asm/export.err
error: export.asm(18):
    syntax error, unexpected EQUS
Assembly aborted with 1 error!
